--- a/app/src/main/res/layout/formulario_avaliacao.xml
+++ b/app/src/main/res/layout/formulario_avaliacao.xml
@@ -29,7 +29,7 @@
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ingere Bebida Alcoólica?"
+        android:text="Alto Consumo de Álcool?"
         android:id="@+id/swtBebidaAlcoolica"
         android:checked="false"
         android:layout_below="@+id/swtFumante"
@@ -41,10 +41,34 @@
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Alto Consumo de Sódio?"
+        android:id="@+id/swtConsumoSodio"
+        android:checked="false"
+        android:layout_below="@+id/swtBebidaAlcoolica"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Alto Consumo de Açúcar e Gorduras?"
+        android:id="@+id/swtConsumoAcucar"
+        android:checked="false"
+        android:layout_below="@+id/swtConsumoSodio"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Prativa Atividade Física?"
         android:id="@+id/swtAtividadeFisica"
         android:checked="false"
-        android:layout_below="@+id/swtBebidaAlcoolica"
+        android:layout_below="@+id/swtConsumoAcucar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
