Inclusão de todos os campos Mutáveis.

--- a/app/src/main/res/layout/formulario_avaliacao.xml
+++ b/app/src/main/res/layout/formulario_avaliacao.xml
@@ -167,8 +167,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Uso de Diuréticos Tiazídicos?"
-                android:id="@+id/swtDiuréticosTiazídicos"
+                android:text="Uso de Diuréticos?"
+                android:id="@+id/swtDiureticos"
                 android:checked="false"
                 android:layout_below="@+id/swtUsoCortisona"
                 android:layout_alignParentLeft="true"
@@ -181,10 +181,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Uso de Meta-bloqueadores?"
-                android:id="@+id/swtMetaBloqueadores"
+                android:text="Uso de Beta-bloqueadores?"
+                android:id="@+id/swtBetaBloqueadores"
                 android:checked="false"
-                android:layout_below="@+id/swtDiuréticosTiazídicos"
+                android:layout_below="@+id/swtDiureticos"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentRight="true"
@@ -198,7 +198,7 @@
                 android:text="Já teve filhos?"
                 android:id="@+id/swtTeveFilhos"
                 android:checked="false"
-                android:layout_below="@+id/swtMetaBloqueadores"
+                android:layout_below="@+id/swtBetaBloqueadores"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentRight="true"
