Organização dos fatores de risco na avaliação.

--- a/app/src/main/res/layout/formulario_avaliacao.xml
+++ b/app/src/main/res/layout/formulario_avaliacao.xml
@@ -83,8 +83,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Prativa Atividade Física?"
-                android:id="@+id/swtAtividadeFisica"
+                android:text="É Sedentário?"
+                android:id="@+id/swtSedentarismo"
                 android:checked="false"
                 android:layout_below="@+id/swtConsumoAcucar"
                 android:layout_alignParentLeft="true"
@@ -100,7 +100,7 @@
                 android:text="Toma Anticoncepcional?"
                 android:id="@+id/swtAnticoncepcional"
                 android:checked="false"
-                android:layout_below="@+id/swtAtividadeFisica"
+                android:layout_below="@+id/swtSedentarismo"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentRight="true"
