Criação da tela de resultado de doenças e match dos fatores de risco.

--- a/app/src/main/res/layout/resultado_avaliacao.xml
+++ b/app/src/main/res/layout/resultado_avaliacao.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/rlResultadoAvaliacao">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="De acordo com os dados informados, você tem possibilidade de desenvolver as seguintes doenças:"
+        android:id="@+id/txtIntroducao"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="As doenças estão ordenadas pela sua maior propensão de adquirí-las. Selecione a doença que deseja saber quais práticas e alimentos podem ajudar na prevenção"
+        android:id="@+id/txtConclusao"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
