--- a/app/src/main/res/layout/orientacoes_nutricionais.xml
+++ b/app/src/main/res/layout/orientacoes_nutricionais.xml
@@ -1,32 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Selecione qual cliente você deseja visualizar: "
-        android:id="@+id/textViewNutricionista"
-        android:layout_marginTop="63dp"
+        android:id="@+id/textOrientacaoNutricional"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <listView1
+    <ListView
         android:id="@+id/listView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textViewNutricionista"
+        android:layout_below="@+id/textOrientacaoNutricional"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="150dp" >
-        <!--android:entries="@array/sections"-->
-    </listView1>
+        android:layout_marginTop="100dp"
+        android:entries="@array/alimentos" >
+    </ListView>
+    
+
 
 </RelativeLayout>
