--- a/app/src/main/res/layout/inicial.xml
+++ b/app/src/main/res/layout/inicial.xml
@@ -76,7 +76,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-<!--    <Button
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Praticas Nutricionais"
@@ -96,7 +96,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />-->
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
