--- a/app/src/main/res/layout/clientes_nutricionista.xml
+++ b/app/src/main/res/layout/clientes_nutricionista.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <listView1
+    <ListView
         android:id="@+id/listView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,6 +27,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="150dp" >
         <!--android:entries="@array/sections"-->
-    </listView1>
+    </ListView>
 
 </RelativeLayout>
