--- a/app/src/main/res/layout/inicial.xml
+++ b/app/src/main/res/layout/inicial.xml
@@ -98,6 +98,17 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Enviar Email"-->
+        <!--android:id="@+id/btnEmail"-->
+        <!--android:layout_below="@+id/btnNotificacao"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentEnd="true" />-->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
