--- a/app/src/main/res/layout/praticas_recomendados.xml
+++ b/app/src/main/res/layout/praticas_recomendados.xml
@@ -24,8 +24,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="100dp"
-        android:entries="@array/praticas" >
+        android:layout_marginTop="100dp">
+        //android:entries="@array/praticas" >
     </ListView>
 
 </RelativeLayout>
