--- a/app/src/main/res/layout/orientacoes_nutricionais.xml
+++ b/app/src/main/res/layout/orientacoes_nutricionais.xml
@@ -17,7 +17,7 @@
         android:layout_alignParentStart="true" />
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/listViewAlimentos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -27,8 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="100dp"
-        android:entries="@array/alimentos" >
+        android:layout_marginTop="100dp">
     </ListView>
     
 
