--- a/app/src/main/res/layout/grafico.xml
+++ b/app/src/main/res/layout/grafico.xml
@@ -15,8 +15,9 @@
 
     <com.jjoe64.graphview.GraphView
     android:layout_width="wrap_content"
-    android:layout_height="350dip"
+    android:layout_height="wrap_content"
     android:id="@+id/graph"
     android:layout_below="@+id/txtResultados" />
+    <!--android:layout_height="350dip"-->
 
 </RelativeLayout>
